Ensure text remains visible during webfont load

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,14 @@ body {
 }
 
 @font-face {
+  font-display: swap;
   font-family: "Mont light";
   src: local("Mont light"),
     url(./assets/fonts/Mont/Mont-ExtraLightDEMO.otf) format("truetype");
 }
 
 @font-face {
+  font-display: swap;
   font-family: "Mont";
   src: local("Mont"),
     url(./assets/fonts/Mont/Mont-HeavyDEMO.otf) format("truetype");
